--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 setuptools~=65.5.1
 rasterio~=1.3.8
-pdal~=3.2.3
+pdal~=3.4.5
 geopandas~=0.13.2
 pyproj~=3.6.0
 shapely~=2.0.1
 pandas~=2.0.3
-numpy~=1.25.1
+numpy~=1.26.4
 matplotlib~=3.7.2
 mayavi~=4.8.1
+scipy~=1.14.1
