--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,4 @@
-sphinx~=6.1.3
-sphinx_rtd_theme~=1.2.0
+sphinx>=7.4.7
+sphinx_rtd_theme>=1.3.0
+docutils>=0.17,<0.21
+sphinx-autodoc-typehints>=1.19.6
