--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-setuptools~=65.5.1
+setuptools~=75.5.1
 rasterio~=1.3.8
 pdal~=3.4.5
 geopandas~=0.13.2
@@ -7,5 +7,6 @@ shapely~=2.0.1
 pandas~=2.0.3
 numpy~=1.26.4
 matplotlib~=3.7.2
-mayavi~=4.8.1
+mayavi~=4.8.2
 scipy~=1.14.1
+configobj~=5.0.8
