--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,11 @@ jobs:
         with:
           auto-update-conda: true
           python-version: 3.8
+          channels: conda-forge
+          activate-environment: pyforestscan_env
 
       - name: Create Conda environment
-        run: conda create --name pyforestscan_env python=3.8 pdal
+        run: conda create --name pyforestscan_env python=3.8 pdal -c conda-forge
 
       - name: Activate Conda environment
         run: source activate pyforestscan_env
