--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,19 @@ jobs:
           auto-update-conda: true
           python-version: 3.8
           channels: conda-forge
-          activate-environment: pyforestscan_env
 
       - name: Create Conda environment
         run: conda create --name pyforestscan_env python=3.8 pdal -c conda-forge
 
-      - name: Activate Conda environment
-        run: source activate pyforestscan_env
-
-      - name: Install dependencies
+      - name: Activate Conda environment and install dependencies
+        shell: bash -l {0}
         run: |
+          conda activate pyforestscan_env
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
       - name: Run tests
-        run: pytest
+        shell: bash -l {0}
+        run: |
+          conda activate pyforestscan_env
+          pytest
