--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,18 +23,12 @@ jobs:
           python-version: 3.10
           channels: conda-forge
 
-      - name: Create Conda environment
-        run: conda create --name pyforestscan_env python=3.10 pdal -c conda-forge
-
-      - name: Activate Conda environment and install dependencies
-        shell: bash -l {0}
+      - name: Create and install dependencies in Conda environment
         run: |
-          conda activate pyforestscan_env
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          conda create --name pyforestscan_env python=3.10 pdal -c conda-forge
+          conda run -n pyforestscan_env pip install -r requirements.txt
+          conda run -n pyforestscan_env pip install -r requirements-dev.txt
 
       - name: Run tests
-        shell: bash -l {0}
         run: |
-          conda activate pyforestscan_env
-          pytest
+          conda run -n pyforestscan_env pytest
