--- a/.github/workflows/paper.yml
+++ b/.github/workflows/paper.yml
@@ -13,14 +13,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Build draft PDF
-        uses: openjournals/openjournals-draft-action@v1
+        uses: openjournals/openjournals-draft-action@master
         with:
           journal: joss
           paper-path: paper/paper.md
-
-      - name: Upload PDF
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: paper
