Add new images and documentation files
This commit introduces several new files, including images, example data, and API documentation for various modules. Additionally, a Code of Conduct is established, fostering a welcoming community environment. The example notebook on calculating forest metrics has been updated to improve clarity and efficiency in demonstrating the use of the PyForestScan library.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,12 +46,19 @@ nav:
             - usage/forest-structure/fhd.md
     - Benchmarks: benchmarks.md
     - Contributing: contributing.md
-    - Changelog: changelog.md
+    - Changelog: https://github.com/iosefa/PyForestScan/releases
     - Report Issues: https://github.com/iosefa/PyForestScan/issues
     - Examples:
-        - examples/getting-started.ipynb
+        - examples/getting-started-importing-preprocessing-dtm-chm.ipynb
+        - examples/calculate-forest-metrics.ipynb
+        - examples/working-with-large-point-clouds.ipynb
     - API Reference:
-        - common module: common.md
+        - calculate module: api/calculate.md
+        - filters module: api/filters.md
+        - handlers module: api/handlers.md
+        - pipeline module: api/pipeline.md
+        - process module: api/process.md
+        - visualize module: api/visualize.md
 
 extra_css:
     - overrides/custom.css
