Update MkDocs workflow and dependencies for improved documentation deployment
Enhanced the MkDocs GitHub Actions workflow by refining plugin installation and updating dependencies. Added the `mkdocstrings-python` and `mkdocs-git-revision-date-plugin` plugins for better functionality and streamlined `docs.yml` configuration.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,7 +71,8 @@ jobs:
             mkdocs \
             mkdocs-material \
             mkdocstrings \
-            git-revision-date \
+            mkdocstrings-python \
+            mkdocs-git-revision-date-plugin \
             mkdocs-jupyter \
             pymdown-extensions
 
