Add type annotations across modules for enhanced clarity and checking
Introduced type hints for functions in core modules (`filters.py`, `process.py`, `handlers.py`, etc.) to improve code clarity and enable static type checking. Adjusted related docstrings and examples to align with the updates. Updated `mkdocs.yml` to include Code of Conduct in documentation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
             - usage/forest-structure/fhd.md
     - Benchmarks: benchmarks.md
     - Contributing: contributing.md
+    - Code of Conduct: code_of_conduct.md
     - Changelog: https://github.com/iosefa/PyForestScan/releases
     - Report Issues: https://github.com/iosefa/PyForestScan/issues
     - Examples:
